ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: central-api-gateway
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - backend.stud-hub.me
      secretName: backend-tls-cert
  rules:
    - host: backend.stud-hub.me
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /github/webhook
            pathType: Prefix
            backend:
              service:
                name: ai-code-review
                port:
                  number: 80
